src/components/Settings/styles.module.scss
@import "/styles/variables.scss";

.container {
  position: relative;
  @media (min-width: $breakpoint-tablet) {
    margin-top: 0;
  }
}

.wrapper {
  position: absolute;
  display: grid;
  width: 100%;
  z-index: 9999;

  padding: var(--spacing-sm) 1.25rem;
  grid-template-columns: repeat(6, minmax(0, 1fr));
  grid-template-rows: repeat(2, var(--settings-container-height-touch));
  row-gap: 20px;
  column-gap: 40px;

  @media (min-width: $breakpoint-tablet) {
    width: calc(100% - var(--nav-offset-x));
    padding: 1.25rem var(--spacing-lg) var(--spacing-sm);
  }

  @media (min-width: $breakpoint-tablet) {
    width: calc(100vw - 200px);
    padding: var(--spacing-sm) var(--spacing-lg);
  }

  @media (min-width: $breakpoint-laptop) {
    grid-template-columns: repeat(9, minmax(0, 1fr));
    gap: 40px;
    grid-template-rows: var(--settings-container-height-laptop);
  }

  @media (min-width: $breakpoint-desktop) {
    grid-template-columns: repeat(12, minmax(0, 1fr));
  }
}

.localeselect {
  button {
    text-transform: capitalize;
  }
}

.localeselect,
.a11yselect {
  grid-column: span 3;
  @media (min-width: $breakpoint-tablet) {
    grid-column: span 3;
  }
  @media (min-width: $breakpoint-laptop) {
    grid-column: span 3;
  }
}

.searchform {
  grid-column: span 6;
  grid-row: 1;

  @media (min-width: $breakpoint-tablet) {
    grid-column: span 6;
  }

  @media (min-width: $breakpoint-laptop) {
    grid-row: unset;
    grid-column: span 3;
  }

  @media (min-width: $breakpoint-desktop) {
    grid-column: span 6;
  }
}

// Hitbox for hover interaction
.hitbox {
  width: 100%;
  height: 20px;
  position: fixed;
  z-index: 9998;
}

.placeholder {
  position: absolute;
  height: 80px;
  width: 100%;
  z-index: 9999;
  pointer-events: none;
}

.wrapper:global(.scrolled-outside-view) {
  position: fixed;
  top: -120px;
  transition:
    top 0.3s,
    position 0.3s;
}

.container:global(.noJumpTo) .wrapper:global(.open) {
  top: 40px;
  @media (min-width: $breakpoint-tablet) {
    top: 0px;
  }
}

.wrapper:global(.open) {
  top: 80px;
  @media (min-width: $breakpoint-tablet) {
    top: 0px;
  }
}

